--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "[![Actions Status](https://github.com/Kassy-8/frontend-project-lvl1/workflows/hexlet-check/badge.svg)](https://github.com/Kassy-8/frontend-project-lvl1/actions)",
   "main": "index.js",
   "type": "module",
-  "bin":{
+  "bin": {
     "brain-games": "bin/brain-games.js"
   },
   "scripts": {
@@ -19,5 +19,13 @@
   "bugs": {
     "url": "https://github.com/Kassy-8/frontend-project-lvl1/issues"
   },
-  "homepage": "https://github.com/Kassy-8/frontend-project-lvl1#readme"
+  "homepage": "https://github.com/Kassy-8/frontend-project-lvl1#readme",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "eslint": "^7.18.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1"
+  }
 }
