--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
-  "description": "[![Actions Status](https://github.com/Kassy-8/frontend-project-lvl1/workflows/hexlet-check/badge.svg)](https://github.com/Kassy-8/frontend-project-lvl1/actions)",
+  "description": "Console games with math exercises",
   "main": "index.js",
   "type": "module",
   "bin": {
